--- a/Dockerfile.tests
+++ b/Dockerfile.tests
@@ -1,6 +1,6 @@
 ## Image name: faucet/tests
 
-FROM faucet/test-base:latest
+FROM faucet/test-base:5.0.0
 
 COPY ./ /faucet-src/
 WORKDIR /faucet-src/
