--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Build-Depends: debhelper (>=9),
                python3-msgpack,
                python3-networkx,
                python3-prometheus-client,
-               python3-yaml,
+               python3-yaml (>= 5.1.2), python3-yaml (<< 5.1.3),
                python3-eventlet,
                python3-ryu,
                python3-beka,
