--- a/debian/control
+++ b/debian/control
@@ -35,7 +35,7 @@ Depends: python3-oslo.config (>= 1:3.9~),
          python3-networkx (>= 1.9),
          python3-pbr (>= 1.9),
          python3-prometheus-client (>= 0.7.1), python3-prometheus-client (<< 0.7.2),
-         python3-yaml (>= 3.1.1),
+         python3-yaml (>= 3.1.1), python3-yaml (<= 3.13),
          python3-eventlet (>= 0.24.1), python3-eventlet (<< 0.24.2),
          python3-ryu (>= 4.32), python3-ryu (<< 4.33),
          python3-beka (>= 0.3.3), python3-beka (<< 0.3.4),
