--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -72,3 +72,4 @@ services:
         environment:
             FAUCET_CONFIG_STAT_RELOAD: '${FAUCET_CONFIG_STAT_RELOAD}'
             FAUCET_EVENT_SOCK: '${FAUCET_EVENT_SOCK}'
+            FAUCET_EVENT_SOCK_HEARTBEAT: '${FAUCET_EVENT_SOCK_HEARTBEAT}'
