--- a/debian/control
+++ b/debian/control
@@ -29,8 +29,7 @@ Vcs-Browser: https://github.com/faucetsdn/faucet
 
 Package: python3-faucet
 Architecture: all
-Depends: python3-oslo.config (>= 1:3.9~),
-         python3-influxdb (>= 2.12.0),
+Depends: python3-influxdb (>= 2.12.0),
          python3-msgpack (>= 0.4.2),
          python3-networkx (>= 1.9),
          python3-pbr (>= 1.9),
