Add spine & leaf topology generative unit tests & optimize generative integration tests

--- a/Dockerfile.fuzz-config
+++ b/Dockerfile.fuzz-config
@@ -14,7 +14,12 @@ RUN \
   $PIP3 pip setuptools && \
   $PIP3 -r requirements.txt && \
   $PIP3 -r fuzz-requirements.txt && \
-  $PIP3 .
+  $PIP3 . && \
+  git clone https://github.com/mininet/mininet && \
+  cd mininet && \
+  pip3 install -q .
+
+
 
 VOLUME ["/var/log/afl/"]
 
