--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        MATRIX_SHARD: [--generative_unit, --generative_integration]
+        MATRIX_SHARD: [--generative_unit, --generative_tolerance]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
