Update to test-base 8.0.1 image.

--- a/Dockerfile.fuzz-config
+++ b/Dockerfile.fuzz-config
@@ -1,9 +1,9 @@
 ## Image name: faucet/config-fuzzer
 
-FROM faucet/test-base:6.0.0
+FROM faucet/test-base:8.0.1
 
-ENV PIP="pip -q --no-cache-dir install --upgrade"
-ENV PIP3="pip3 -q --no-cache-dir install --upgrade"
+ENV PIP3="pip3 --no-cache-dir install --upgrade"
+ENV PATH="/venv/bin:$PATH"
 
 COPY ./ /faucet-src/
 WORKDIR /faucet-src
@@ -11,6 +11,7 @@ WORKDIR /faucet-src
 RUN \
   apt-get update && \
   apt-get install -y afl cython3 && \
+  $PIP3 pip setuptools && \
   $PIP3 -r requirements.txt && \
   $PIP3 -r fuzz-requirements.txt && \
   $PIP3 .
