--- a/.github/workflows/on-pr.yml
+++ b/.github/workflows/on-pr.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 env:
   FAUCET_TEST_IMG: "faucet/tests"
-  SHARDARGS: "--privileged --sysctl net.ipv6.conf.all.disable_ipv6=0 --ulimit core=99999999999:99999999999 -v /var/local/lib/docker:/var/lib/docker"
+  SHARDARGS: "--privileged --sysctl net.ipv6.conf.all.disable_ipv6=0 --ulimit core=99999999999:99999999999 -v /var/local/lib/docker:/var/lib/docker -v /var/tmp/:/var/tmp/"
   FILES_CHANGED: "all"
   CODECHECK_PY_VER: 3.6
   MATRIX_SHARDS: 10
@@ -174,7 +174,7 @@ jobs:
           sudo modprobe ebtables
       - if: ${{ env.FAUCET_TESTS }}
         name: Run docker
-        run: sudo docker run ${SHARDARGS} -v $HOME/.cache/pip:/var/tmp/pip-cache -e FAUCET_TESTS="${FAUCET_TESTS}" -t ${FAUCET_TEST_IMG} || exit 1
+        run: sudo docker run ${SHARDARGS} -e FAUCET_TESTS="${FAUCET_TESTS}" -t ${FAUCET_TEST_IMG} || exit 1
       - name: Detect core dumps
         run: if [ ls -1 /var/tmp/core* > /dev/null 2>&1 ]; then exit 1; fi
 
@@ -217,6 +217,6 @@ jobs:
         run: docker build --pull -t ${FAUCET_TEST_IMG} -f Dockerfile.tests . || exit 1
       - if: ${{ env.FILES_CHANGED == 'all' || env.PY_FILES_CHANGED || env.RQ_FILES_CHANGED }}
         name: Run docker
-        run: sudo docker run ${SHARDARGS} -v $HOME/.cache/pip:/var/tmp/pip-cache -e FAUCET_TESTS="-ni FaucetSanityTest FaucetStackStringOfDPUntaggedTest" -e HWTESTS="1" -t ${FAUCET_TEST_IMG} || exit 1
+        run: sudo docker run ${SHARDARGS} -e FAUCET_TESTS="-ni FaucetSanityTest FaucetStackStringOfDPUntaggedTest" -e HWTESTS="1" -t ${FAUCET_TEST_IMG} || exit 1
       - name: Detect core dumps
         run: if [ ls -1 /var/tmp/core* > /dev/null 2>&1 ]; then exit 1; fi
