--- a/.github/workflows/on-pr.yml
+++ b/.github/workflows/on-pr.yml
@@ -52,7 +52,8 @@ jobs:
           pip3 install ./
           pip3 show faucet
       - name: Running unit tests
-        run: ./tests/run_unit_tests.sh || exit 1
+        run: |
+          ./tests/run_unit_tests.sh || exit 1
       - if: ${{ matrix.python-version == env.CODECHECK_PY_VER }}
         name: Upload codecov
         uses: codecov/codecov-action@v1
@@ -152,37 +153,39 @@ jobs:
       - if: ${{ env.FILES_CHANGED == 'all' || env.PY_FILES_CHANGED || env.RQ_FILES_CHANGED }}
         name: Shard out tests
         run: |
-            ALLTESTFILES="tests/integration/mininet_tests.py tests/integration/mininet_multidp_tests.py clib/clib_mininet_tests.py"
-            ALLTESTS=$(grep -E -o "^class (Faucet[a-zA-Z0-9]+Test)" ${ALLTESTFILES} | cut -f2 -d" " | sort)
-            declare -A sharded
-            function shard {
-              work=$1
-              workers=$2
-              i=0
-              for shard in $work ; do
-                i=$(( i % workers ))
-                sharded[$i]="${sharded[$i]} $shard"
-                i=$(( i + 1 ))
-              done
-            }
-            shard "$ALLTESTS" ${{ env.MATRIX_SHARDS }}
-            FAUCET_TESTS="-din ${sharded[${{ matrix.MATRIX_SHARD }}]}"
-            echo ::set-env name=FAUCET_TESTS::${FAUCET_TESTS}
+          ALLTESTFILES="tests/integration/mininet_tests.py tests/integration/mininet_multidp_tests.py clib/clib_mininet_tests.py"
+          ALLTESTS=$(grep -E -o "^class (Faucet[a-zA-Z0-9]+Test)" ${ALLTESTFILES} | cut -f2 -d" " | sort)
+          declare -A sharded
+          function shard {
+            work=$1
+            workers=$2
+            i=0
+            for shard in $work ; do
+              i=$(( i % workers ))
+              sharded[$i]="${sharded[$i]} $shard"
+              i=$(( i + 1 ))
+            done
+          }
+          shard "$ALLTESTS" ${{ env.MATRIX_SHARDS }}
+          FAUCET_TESTS="-din ${sharded[${{ matrix.MATRIX_SHARD }}]}"
+          echo ::set-env name=FAUCET_TESTS::${FAUCET_TESTS}
       - if: ${{ env.FAUCET_TESTS }}
         name: Build docker
-        run: docker build --pull -t ${FAUCET_TEST_IMG} -f Dockerfile.tests . || exit 1
+        run: |
+          docker build --pull -t ${FAUCET_TEST_IMG} -f Dockerfile.tests . || exit 1
       - if: ${{ env.FAUCET_TESTS }}
-        name: Setup docker
+        name: Run docker
         run: |
           ulimit -c unlimited
           echo '/var/tmp/core.%h.%e.%t' | sudo tee /proc/sys/kernel/core_pattern
           sudo modprobe openvswitch
           sudo modprobe ebtables
-      - if: ${{ env.FAUCET_TESTS }}
-        name: Run docker
-        run: sudo docker run ${SHARDARGS} -e FAUCET_TESTS="${FAUCET_TESTS}" -t ${FAUCET_TEST_IMG} || exit 1
+          sudo docker run ${SHARDARGS} -e FAUCET_TESTS="${FAUCET_TESTS}" -t ${FAUCET_TEST_IMG} || exit 1
       - name: Detect core dumps
-        run: if [ ls -1 /var/tmp/core* > /dev/null 2>&1 ]; then exit 1; fi
+        run: |
+          if [ ls -1 /var/tmp/core* > /dev/null 2>&1 ]; then
+            exit 1
+          fi
 
   sanity-testing:
     name: Sanity tests
@@ -216,15 +219,20 @@ jobs:
       - if: ${{ env.FILES_CHANGED == 'all' || env.PY_FILES_CHANGED || env.RQ_FILES_CHANGED }}
         name: Setup docker test requirements
         run: |
+      - if: ${{ env.FILES_CHANGED == 'all' || env.PY_FILES_CHANGED || env.RQ_FILES_CHANGED }}
+        name: Build docker
+        run: |
+          docker build --pull -t ${FAUCET_TEST_IMG} -f Dockerfile.tests . || exit 1
+      - if: ${{ env.FILES_CHANGED == 'all' || env.PY_FILES_CHANGED || env.RQ_FILES_CHANGED }}
+        name: Run docker
+        run: |
           ulimit -c unlimited
           echo '/var/tmp/core.%h.%e.%t' | sudo tee /proc/sys/kernel/core_pattern
           sudo modprobe openvswitch
           sudo modprobe ebtables
-      - if: ${{ env.FILES_CHANGED == 'all' || env.PY_FILES_CHANGED || env.RQ_FILES_CHANGED }}
-        name: Build docker
-        run: docker build --pull -t ${FAUCET_TEST_IMG} -f Dockerfile.tests . || exit 1
-      - if: ${{ env.FILES_CHANGED == 'all' || env.PY_FILES_CHANGED || env.RQ_FILES_CHANGED }}
-        name: Run docker
-        run: sudo docker run ${SHARDARGS} -e FAUCET_TESTS="-ni FaucetSanityTest FaucetStackStringOfDPUntaggedTest" -e HWTESTS="1" -t ${FAUCET_TEST_IMG} || exit 1
+          sudo docker run ${SHARDARGS} -e FAUCET_TESTS="-ni FaucetSanityTest FaucetStackStringOfDPUntaggedTest" -e HWTESTS="1" -t ${FAUCET_TEST_IMG} || exit 1
       - name: Detect core dumps
-        run: if [ ls -1 /var/tmp/core* > /dev/null 2>&1 ]; then exit 1; fi
+        run: |
+          if [ ls -1 /var/tmp/core* > /dev/null 2>&1 ]; then
+            exit 1
+          fi
