--- a/.github/workflows/tests-integration.yml
+++ b/.github/workflows/tests-integration.yml
@@ -23,6 +23,11 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - if: ${{ steps.file_changes.outputs.all }}
+        name: Setup dependencies
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y jq
+      - if: ${{ steps.file_changes.outputs.all }}
         name: Compare file changes
         run: |
           FILES_ALL="$(echo '${{ steps.file_changes.outputs.all }}' | jq -r '.[]' | tr '\n' ' ')"
@@ -84,6 +89,11 @@ jobs:
         uses: lots0logs/gh-action-get-changed-files@2.1.4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+      - if: ${{ steps.file_changes.outputs.all }}
+        name: Setup dependencies
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y jq
       - if: ${{ steps.file_changes.outputs.all }}
         name: Compare file changes
         run: |
